--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ img{
 	width: 15rem;
 }
 
+
 @media (min-width: 768px){
 	.imagen-mediana{
 		height: 25rem;
@@ -84,6 +85,17 @@ img{
 	}
 }
 
+.imagen-pequeña{
+	height: 10rem;
+	width: 10rem;
+}
+
+@media (min-width: 768px){
+	.imagen-pequeña{
+		height: 18rem;
+		width: 18rem;
+	}
+}
 
 .centrar-texto{
 	text-align: center;
@@ -143,6 +155,12 @@ header .barra h1{
 	justify-content: space-between;/*Para alinear el contenido verticalmente */
 	text-align: center;
 }
+
+.header-nosotros{
+	background-color: #282828;/*Color de fondo */
+	height:25rem;/*Alto de la imagen, 100vh para cubrir la altura de cualquier pantalla*/
+}
+
 
 /* Raya verde o pseudo elemento */
 .barra h1::after{/*un psuedo elemento */
@@ -226,6 +244,13 @@ header .barra h1{
 	flex-basis: calc(33.3% - 4rem);
 	
 }
+
+.contenido-blog-destacado p{
+	color: #ffffff;
+	font-size: 1.5rem;
+	font-weight: 300;
+}
+
 /* footer */
 .site-footer{
 	background-color: #282828;
